# trakr

./: .replit  LICENSE  README.md  add_project.py  app.py  config.py  del_project.py  fetchJobs.py  forms.py  pyproject.toml  replit.nix  requirements.txt  routes.py
static/: Client_scripts.js  Job_scripts.js  Task_scripts.js  Test_scripts.js
templates/: TaskItem.html  addClientForm.html  addJobForm.html  addTaskForm.html  addTestForm.html  allClients.html  clientItem.html  client_tests.html  delJobscript.html  deleteClientConfirmation.html  home.html  homeClients.html  jobItem.html  job_tasks.html  jobitem.html  login.html  navbar.html  navbar2.html  register.html  subnav.html  svg.html  testItem.html  test_jobs.html  update_client.html  update_job.html
templates/toasts/: crudToast.html
