[tool.poetry]
name = "repl-nix-trakr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pymysql = "^1.1.1"
python-dotenv = "^1.0.1"
flask-login = "^0.6.3"
flask-wtf = "^1.2.1"
wtforms = "^3.1.2"
werkzeug = "^3.0.4"
flask-jwt-extended = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
